--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logoBox p-4 d-flex align-items-center">
-            <a href="index.html" class="d-flex align-items-center"><img src="ctuLogo.png"><h2 id="logoText"class="m-4 fs-5" style="display: inline-block">CTU Main Scholarship Office</h2></a>
+            <a href="index.html" class="d-flex align-items-center"><img src="ctuLogo.png"><h2 id="logoText"class="m-4 fs-5">CTU Main Scholarship Office</h2></a>
         </div>    
         <nav class="p-5 fs-5 d-flex gap-md-5 gap-3">
             <a href="index.html">Home</a>
