--- a/team.html
+++ b/team.html
@@ -16,7 +16,7 @@
     <body>
         <header>
             <div class="logoBox p-4 d-flex align-items-center">
-                <a href="index.html" class="d-flex align-items-center"><img src="ctuLogo.png"><h2 id="logoText"class="m-4 fs-5" style="display: inline-block">CTU Main Scholarship Office</h2></a>
+                <a href="index.html" class="d-flex align-items-center"><img src="ctuLogo.png"><h2 id="logoText"class="m-4 fs-5">CTU Main Scholarship Office</h2></a>
             </div>    
             <nav class="p-5 fs-5 d-flex gap-md-5 gap-3">
                 <a href="index.html">Home</a>
@@ -95,6 +95,7 @@
                 <p>Monday - Friday: 8:00 AM to 5:00 PM</p>
             </div>
         </footer>
+        <script src="index.js"></script>
         <script src="navBar.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
