--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <header>
         <div class="logoBox p-4 d-flex align-items-center">
-            <a href="index.html" class="d-flex align-items-center"><img src="ctuLogo.png"><h2 id="logoText"class="m-4 fs-5">CTU Main Scholarship Office</h2></a>
+            <a href="index.html" class="d-flex align-items-center"><img src="ctuLogo.png"><h2 id="logoText"class="m-4 fs-5" style="display: inline-block">CTU Main Scholarship Office</h2></a>
         </div>    
         <nav class="p-5 fs-5 d-flex gap-md-5 gap-3">
-            <a href="index.html">Home</a>
-            <a href="information.html">Information</a>
-            <a href="services.html">Services</a>
-            <a href="updates.html">Updates</a>
+            <a href="">Home</a>
+            <a href="">Information</a>
+            <a href="">Services</a>
+            <a href="">Updates</a>
         </nav>
         <div class="hamburger">
             <span class="bun"></span>
@@ -30,34 +30,66 @@
         <div class="container text-center mt-5">
             <h1 class="text-white mt-5 px-5 pt-5">Welcome</h1>
             <h2 style="color: #81c4f7">CTU Main Scholarship Office</h2>
-            <a href="team.html" class="btn btn-primary fs-5 p-2 px-4 fs-sm-6 rounded-pill mt-3"><b>Contact Us</b></a>
+            <a href="" class="btn btn-primary fs-5 p-2 px-4 fs-sm-6 rounded-pill mt-3"><b>Contact Us</b></a>
         </div>
     </section>
-    <section class="intro px-5">
-        <container class="p-5">
-            <h2 class="text-center mb-md-5 mt-5 mb-sm-4 px-5 pb-5">Cebu Technological University</h2>
+    <section class="scholarshipOverview">
+        <div class="container p-5 mx-auto">
+            <h2 class="text-center mb-5">Scholarships Overview</h2>
             <div class="image rounded-3 mb-5"></div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="bg-dark-subtle p-5 mt-5 mb-5">
-                        <h3>Mission</h3>
-                        <p>Provide advanced professional and technical instruction for special purposes, advanced studies in industrial trade, agriculture, fishery, forestry, aeronautics, land-based programs, arts and sciences, health sciences, information technology and other relevant fields of study. It shall also undertake research and extension services and provide progressive leadership in its areas of specialization (Sec. 2 of RA 9744)</p>
+            <div class="row mx-auto mb-5">
+                <div class="col-sm-4 col-12 mb-4">
+                    <div class="bg-dark-subtle p-5 rounded-4">
+                        <h3>Government</h3>
+                        <ul>
+                            <li>Cebu City Scholarship Program</li>
+                            <li>TULONG DUNONG PROGRAM-TERTIARY EDUCATION SUBSIDY</li>
+                            <li>TERTIARY EDUCATION SUBSIDY</li>
+                            <li>CHED STUFAPS</li>
+                            <li>LGU NAGA</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="bg-dark text-white p-5 mt-5 mb-5">
-                        <h3>Goals</h3>
-                        <p>Produce scientifically and technologically oriented human capital equipped with appropriate knowledge, skills, and attitudes. Likewise pursue relevant research, strengthen linkages with the industry, community and other institutions and maintain sustainable technology for the preservation of the environment.</p>
+                <div class="col-sm-4 col-12 mb-4">
+                    <div class="bg-dark text-white p-5 rounded-4">
+                        <h3>Non-Government</h3>
+                        <ul>
+                            <li>PLDT- SMART 2G</li>
+                            <li>MEGAWIDE ENGINEERING EXCELLENCE SCHOLARSHIP</li>
+                            <li>DAMASO KE CO</li>
+                            <li>UCPB</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="bg-secondary text-white p-5 mt-5 mb-5">
-                        <h3>Vision</h3>
-                        <p>A premier, multidisciplinary technological university.</p>
+                <div class="col-sm-4 col-12 mb-4">
+                    <div class="bg-success text-white p-5 rounded-4">
+                        <h3>Internally Funded</h3>
+                        <ul>
+                            <li>BOR-28-RESOLUTION</li>
+                            <li>BOR-50-RESOLUTION</li>
+                            <li>BOT-RESOLUTION</li>
+                        </ul>
                     </div>
                 </div>
             </div>
-        </container>
+            <h2 class="text-center mb-4">How to Apply?</h2>
+                <ol class="lead">
+                <li>To avail of any scholarship, you are advised to keep yourself updated on our Official Facebook Group Page:
+<a href="https://www.facebook.com/groups/353855911379546">Click Here</a>
+
+We will only announce on our Group Page once a Scholarship Program is going to accept Applicants. Check it out today for your information.
+                </li>
+                <li>
+                    Visit our Contact Page to inquire to the assigned staff about the scholarship</li>
+                </li>
+            </ol>
+        </div>
+    </section>
+    <section class="announcements bg-light p-5">
+        <div class="container">
+            <h2 class="mb-5 text-center">Announcements</h2>
+            <div class="announcementContentBox"></div>
+        </div>
     </section>
     
     <iframe id = "organizationChart" src="https://drive.google.com/file/d/1euSbWq8MKqN2bb0a7nzmyonzf4bXWv7Q/preview" allow="autoplay" class="w-100" style="min-height: 500px; margin: 0;"></iframe>
