--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <div class="logoBox p-4 d-flex align-items-center">
-            <a href="index.html" class="d-flex align-items-center"><img src="ctuLogo.png"><h2 id="logoText"class="m-4 fs-5" style="display: inline-block">CTU Main Scholarship Office</h2></a>
+            <a href="index.html" class="d-flex align-items-center"><img src="ctuLogo.png"><h2 id="logoText"class="m-4 fs-5 d-sm-inline-block d-none">CTU Main Scholarship Office</h2></a>
         </div>    
-        <nav class="p-5 fs-5 d-flex gap-md-5 gap-3">
+        <nav class="p-5 fs-5 d-sm-flex gap-sm-5">
             <a href="">Home</a>
             <a href="">Information</a>
             <a href="">Services</a>
@@ -34,12 +34,12 @@
         </div>
     </section>
     <section class="scholarshipOverview">
-        <div class="container p-5 mx-auto">
+        <div class="container py-5 px-sm-5 px-2 mx-auto">
             <h2 class="text-center mb-5">Scholarships Overview</h2>
             <div class="image rounded-3 mb-5"></div>
             <div class="row mx-auto mb-5">
                 <div class="col-sm-4 col-12 mb-4">
-                    <div class="bg-dark-subtle p-5 rounded-4">
+                    <div class="bg-dark-subtle p-4 p-sm-5 rounded-4">
                         <h3>Government</h3>
                         <ul>
                             <li>Cebu City Scholarship Program</li>
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 col-12 mb-4">
-                    <div class="bg-dark text-white p-5 rounded-4">
+                    <div class="bg-dark text-white p-4 p-sm-5 rounded-4">
                         <h3>Non-Government</h3>
                         <ul>
                             <li>PLDT- SMART 2G</li>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 col-12 mb-4">
-                    <div class="bg-success text-white p-5 rounded-4">
+                    <div class="bg-success text-white p-4 p-sm-5 rounded-4">
                         <h3>Internally Funded</h3>
                         <ul>
                             <li>BOR-28-RESOLUTION</li>
@@ -74,13 +74,12 @@
             </div>
             <h2 class="text-center mb-4">How to Apply?</h2>
                 <ol class="lead">
-                <li>To avail of any scholarship, you are advised to keep yourself updated on our Official Facebook Group Page:
-<a href="https://www.facebook.com/groups/353855911379546">Click Here</a>
-
-We will only announce on our Group Page once a Scholarship Program is going to accept Applicants. Check it out today for your information.
+                <li>To avail of any scholarship, you are advised to keep yourself updated on the announcements shown below, or on our Official Facebook Group Page:
+<a href="https://www.facebook.com/groups/353855911379546">Click Here,</a>
+Our announcements will show once a Scholarship Program is going to accept Applicants. Check it out below for your information.
                 </li>
                 <li>
-                    Visit our Contact Page to inquire to the assigned staff about the scholarship</li>
+                    Visit our <a href="team.html">Contact Page</a> to inquire to the assigned staff about the scholarship</li>
                 </li>
             </ol>
         </div>
