--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <a href="index.html" class="d-flex align-items-center"><img src="ctuLogo.png"><h2 id="logoText"class="m-4 fs-5 d-sm-inline-block d-none">CTU Main Scholarship Office</h2></a>
         </div>    
         <nav class="p-5 fs-5 d-sm-flex gap-sm-5">
-            <a href="">Home</a>
-            <a href="">Information</a>
-            <a href="">Services</a>
-            <a href="">Updates</a>
+            <a href="index.html">Home</a>
+            <a href="information.html">Information</a>
+            <a href="services.html">Services</a>
+            <a href="updates.html">Updates</a>
         </nav>
         <div class="hamburger">
             <span class="bun"></span>
@@ -30,7 +30,7 @@
         <div class="container text-center mt-5">
             <h1 class="text-white mt-5 px-5 pt-5">Welcome</h1>
             <h2 style="color: #81c4f7">CTU Main Scholarship Office</h2>
-            <a href="" class="btn btn-primary fs-5 p-2 px-4 fs-sm-6 rounded-pill mt-3"><b>Contact Us</b></a>
+            <a href="team.html" class="btn btn-primary fs-5 p-2 px-4 fs-sm-6 rounded-pill mt-3"><b>Contact Us</b></a>
         </div>
     </section>
     <section class="scholarshipOverview">
