--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Our announcements will show once a Scholarship Program is going to accept Applic
             </ol>
         </div>
     </section>
-    <section class="announcements bg-light p-5">
+    <section class="announcements bg-light px-2 px-sm-5 py-5">
         <div class="container">
             <h2 class="mb-5 text-center">Announcements</h2>
             <div class="announcementContentBox"></div>
