--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="ctuLogo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+    <meta name="google-site-verification" content="9E1kkIH2ng7ZMUJ9f082_bvOIhAOuynGzNkOzJuHoPw" />
     <title>Cebu Technological University Main - Scholarship Office</title>
 </head>
 <body>
