--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
     <section class="scholarshipOverview">
         <div class="container py-5 px-sm-5 px-2 mx-auto">
-            <h2 class="text-center mb-5">Scholarships Overview</h2>
+            <h2 class="text-center mb-5">Scholarships</h2>
             <div class="image rounded-3 mb-5"></div>
             <div class="row mx-auto mb-5">
                 <div class="col-sm-4 col-12 mb-4">
@@ -74,7 +74,7 @@
                     </div>
                 </div>
             </div>
-            <h2 class="text-center mb-4">How to Apply?</h2>
+            <h2 class="text-center mb-4">How to Apply for Scholarships?</h2>
                 <ol class="lead">
                 <li>To avail of any scholarship, you are advised to keep yourself updated on the announcements shown below, or on our Official Facebook Group Page:
 <a href="https://www.facebook.com/groups/353855911379546">Click Here,</a>
