--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="Jane">
                     <img src="jane.png" height="350">
-                    <h2>Hi, I'm Ja</h2>
+                    <h2>Miss Jane</h2>
                     <label>Team Leader</label>
                     <a target="_blank" href="https://www.facebook.com/jandoCTU"><i class="fa-brands fa-facebook-messenger"></i></a>
                 </div>
@@ -51,28 +51,28 @@
             <div class="workers">
                 <div class="Chynna">
                     <img src="love.png" height="260">
-                    <h2>Hi, I'm Shaina</h2>
+                    <h2>Miss Shaina</h2>
                     <label>TDP-TES and Student Labor</label>
                     <label>IN-CHARGE</label>
                     <a target="_blank" href="https://www.facebook.com/profile.php?id=100087362527606"><i class="fa-brands fa-facebook-messenger"></i></a>
                 </div>
                 <div class="Grace" height="230">
                     <img src="grace.png">
-                    <h2>Hi, I'm Grace</h2>
+                    <h2>Miss Grace</h2>
                     <label>TES and Document Custodian</label>
                     <label>IN-CHARGE</label>
                     <a target="_blank" href="https://www.facebook.com/profile.php?id=100087196930056"><i class="fa-brands fa-facebook-messenger"></i></a>
                 </div>
                 <div class="Grey" height="230">
                     <img src="grey.png">
-                    <h2>Hi, I'm Grey</h2>
+                    <h2>Sir Grey</h2>
                     <label>Cebu City Scholarship Program</label>
                     <label>IN-CHARGE</label>
                     <a target="_blank" href="https://www.facebook.com/Ilovejesusthroughmyheart"><i class="fa-brands fa-facebook-messenger"></i></a>
                 </div>
                 <div class="Clint" height="230">
                     <img src="clint.png">
-                    <h2>Hi, I'm Clint</h2>
+                    <h2>Sir Clint</h2>
                     <label>CHED-STUFAP, DOST & <br>NON GOV'T Scholarships</label>
                     <label>IN-CHARGE</label>
                     <a target="_blank" href="https://www.facebook.com/clint.dijee"><i class="fa-brands fa-facebook-messenger"></i></a>
