--- a/team.html
+++ b/team.html
@@ -78,6 +78,12 @@
                     <a target="_blank" href="https://www.facebook.com/clint.dijee"><i class="fa-brands fa-facebook-messenger"></i></a>
                 </div>
             </div>
+            <div class="chatBox">
+                <div class="chatBoxHeader">Chat Assistant</div>
+                <iframe class="chatFrame" src="chatPage.html"></iframe>
+                <div class="textBox"><input type="text" id="chatTextBox" placeholder="Send a message"><div class="sendIcon"><i class="fa-solid fa-arrow-right fa-sm"></i></div></div>
+            </div>
+            <div class="chatIcon"><i class="fa-solid fa-message fa-"></i></div>
             <div class="form">
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd97LEE8kmkuPL9D2I3yAJVWY7WOx9w8RiL90t3rJJSwLXquQ/viewform"></iframe>
             </div>
