--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Invest in your future with CTU's Scholarship Office. Turn your academic aspirations into reality. Apply today and unlock the doors to a brighter tomorrow.">
+    <meta name="description" content="Invest in your future with CTU's Scholarship Office. Turn your academic aspirations into reality. Apply today">
     <script src="https://kit.fontawesome.com/3841f3c238.js" crossorigin="anonymous"></script>
     <link rel="icon" href="favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <meta name="google-site-verification" content="9E1kkIH2ng7ZMUJ9f082_bvOIhAOuynGzNkOzJuHoPw" />
-    <title>Cebu Technological University Main - Scholarship Office</title>
+    <title>Apply for Scholarships - CTU Main Campus</title>
 </head>
 <body>
     <header>
