--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             <a href="team.html" class="btn btn-primary fs-5 p-2 px-4 fs-sm-6 rounded-pill mt-3"><b>Contact Us</b></a>
         </div>
     </section>
+    <div class="chatBox">
+         <div class="chatBoxHeader">Chat Assistant</div>
+         <iframe class="chatFrame" src="chatPage.html"></iframe>
+         <div class="textBox"><input type="text" id="chatTextBox" placeholder="Send a message"><div class="sendIcon"><i class="fa-solid fa-arrow-right fa-sm"></i></div></div>
+    </div>
+    <div class="chatIcon"><i class="fa-solid fa-message fa-"></i></div>
     <section class="scholarshipOverview">
         <div class="container py-5 px-sm-5 px-2 mx-auto">
             <h2 class="text-center mb-5">Scholarships</h2>
